[gd_scene load_steps=49 format=3 uid="uid://38ts1v8d4yx6"]

[ext_resource type="Texture2D" uid="uid://jnhrqbsna2l3" path="res://Entities/ElectronicGuy/Art/TvG_Idle.png" id="1_qxvli"]
[ext_resource type="Script" path="res://Entities/ElectronicGuy/Scripts/Electronic_Guy.gd" id="1_vui34"]
[ext_resource type="Texture2D" uid="uid://covd1ohlw8xpy" path="res://Entities/ElectronicGuy/Art/TvG_Teleport.png" id="2_r4oyu"]
[ext_resource type="Texture2D" uid="uid://do0tj02dopgje" path="res://Systems/Flashlight/Cone_Light.png" id="5_7t6pa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6p44n"]
atlas = ExtResource("1_qxvli")
region = Rect2(0, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k5he"]
atlas = ExtResource("1_qxvli")
region = Rect2(64, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubxpp"]
atlas = ExtResource("1_qxvli")
region = Rect2(128, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dttw6"]
atlas = ExtResource("1_qxvli")
region = Rect2(192, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_luok6"]
atlas = ExtResource("1_qxvli")
region = Rect2(256, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoulg"]
atlas = ExtResource("1_qxvli")
region = Rect2(0, 150, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jksx"]
atlas = ExtResource("1_qxvli")
region = Rect2(64, 150, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qay1s"]
atlas = ExtResource("1_qxvli")
region = Rect2(128, 150, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pip5g"]
atlas = ExtResource("1_qxvli")
region = Rect2(192, 150, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqlet"]
atlas = ExtResource("1_qxvli")
region = Rect2(256, 150, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywklf"]
atlas = ExtResource("1_qxvli")
region = Rect2(0, 300, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_73jbg"]
atlas = ExtResource("1_qxvli")
region = Rect2(64, 300, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_13ard"]
atlas = ExtResource("1_qxvli")
region = Rect2(128, 300, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuh3h"]
atlas = ExtResource("1_qxvli")
region = Rect2(192, 300, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_drvni"]
atlas = ExtResource("1_qxvli")
region = Rect2(256, 300, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1epev"]
atlas = ExtResource("1_qxvli")
region = Rect2(0, 450, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaoea"]
atlas = ExtResource("2_r4oyu")
region = Rect2(0, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p78q"]
atlas = ExtResource("2_r4oyu")
region = Rect2(64, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dlij"]
atlas = ExtResource("2_r4oyu")
region = Rect2(128, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2qsx"]
atlas = ExtResource("2_r4oyu")
region = Rect2(192, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l13yv"]
atlas = ExtResource("2_r4oyu")
region = Rect2(256, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1py3w"]
atlas = ExtResource("2_r4oyu")
region = Rect2(320, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywl4v"]
atlas = ExtResource("2_r4oyu")
region = Rect2(384, 0, 64, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh5hb"]
atlas = ExtResource("1_qxvli")
region = Rect2(64, 450, 64, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_mb30b"]
animations = [{
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_6p44n")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_4k5he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubxpp")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dttw6")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_luok6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_aoulg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jksx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qay1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pip5g")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_cqlet")
}],
"loop": true,
"name": &"Glitch",
"speed": 12.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_ywklf")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_73jbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13ard")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuh3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drvni")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_1epev")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaoea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p78q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dlij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2qsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l13yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1py3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywl4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh5hb")
}],
"loop": false,
"name": &"Teleport",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qfv6g"]
radius = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_5ww1c"]
radius = 25.0799

[sub_resource type="Animation" id="Animation_iwqh8"]
resource_name = "Glitch"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Glitch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_haii7"]
resource_name = "Idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_aewdu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Teleport"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o4k43"]
resource_name = "Teleport"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Teleport"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_71ixp"]
resource_name = "Teleport_Backward"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Teleport"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8c2gp"]
_data = {
"Glitch": SubResource("Animation_iwqh8"),
"Idle": SubResource("Animation_haii7"),
"RESET": SubResource("Animation_aewdu"),
"Teleport": SubResource("Animation_o4k43"),
"Teleport_Backward": SubResource("Animation_71ixp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nu1t0"]
animation = &"Glitch"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6jfkl"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_53c6o"]
animation = &"Teleport"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ljog"]
animation = &"Teleport_Backward"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wdx0u"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7obh5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qq1up"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b4r00"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_naexb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_117uq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ah7ye"]
states/Glitch/node = SubResource("AnimationNodeAnimation_nu1t0")
states/Glitch/position = Vector2(353, 172)
states/Idle/node = SubResource("AnimationNodeAnimation_6jfkl")
states/Idle/position = Vector2(353, 66)
states/Start/position = Vector2(211, 100)
states/Teleport/node = SubResource("AnimationNodeAnimation_53c6o")
states/Teleport/position = Vector2(485, 66)
states/Teleport_Backward/node = SubResource("AnimationNodeAnimation_0ljog")
states/Teleport_Backward/position = Vector2(485, 172)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_wdx0u"), "Idle", "Teleport", SubResource("AnimationNodeStateMachineTransition_7obh5"), "Teleport", "Teleport_Backward", SubResource("AnimationNodeStateMachineTransition_qq1up"), "Idle", "Glitch", SubResource("AnimationNodeStateMachineTransition_b4r00"), "Glitch", "Idle", SubResource("AnimationNodeStateMachineTransition_naexb"), "Teleport_Backward", "Idle", SubResource("AnimationNodeStateMachineTransition_117uq")]

[node name="ElectronicGuyV2" type="CharacterBody2D" node_paths=PackedStringArray("anim_sprite", "anim_player", "anim_tree", "navigation_agent", "vision_cone", "hitbox")]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_vui34")
teleport_min_speed = 70
teleport_max_speed = 90
teleport_min_hide_length = 1.5
teleport_max_hide_length = 2.5
movement_speed = 0
acceleration = 5
health = 1000
attack_damage = 200
spawn_location = "TV"
wander_radius = 50.0
anim_sprite = NodePath("AnimatedSprite2D")
anim_player = NodePath("AnimationPlayer")
anim_tree = NodePath("AnimationTree")
navigation_agent = NodePath("NavigationAgent2D")
vision_cone = NodePath("VisionCone")
hitbox = NodePath("Hitbox")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_mb30b")
animation = &"Teleport"
autoplay = "Idle"
offset = Vector2(0, -45)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("CircleShape2D_qfv6g")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.892237, 0.243212, 0.471087, 1)

[node name="visionsprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.2, 2.5)
texture = ExtResource("5_7t6pa")

[node name="VisionCone" type="PointLight2D" parent="."]
position = Vector2(0, -70)
scale = Vector2(1.2, 2.5)
color = Color(0.832644, 0.290377, 0.290377, 1)
texture = ExtResource("5_7t6pa")

[node name="RayCast2D" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, 40)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, 30)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, 20)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D4" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, 10)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D5" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, -40)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D7" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, -30)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D8" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, -20)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D9" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, -10)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D6" type="RayCast2D" parent="VisionCone"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
target_position = Vector2(80, 0)
collision_mask = 3
collide_with_areas = true
collide_with_bodies = false

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, 7)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_5ww1c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8c2gp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ah7ye")
anim_player = NodePath("../AnimationPlayer")

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = true

[node name="GlitchTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SearchCooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="PlayerEnteredHitbox" from="." to="." method="_on_player_entered_hitbox"]
[connection signal="PlayerFound" from="." to="." method="_on_player_found"]
[connection signal="PlayerLost" from="." to="." method="_on_player_lost"]
[connection signal="Stunned" from="." to="." method="_on_stunned"]
[connection signal="Unstunned" from="." to="." method="_on_unstunned"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_teleport_timer_timeout"]
[connection signal="timeout" from="GlitchTimer" to="." method="_on_glitch_timer_timeout"]
[connection signal="timeout" from="SearchCooldown" to="." method="_on_search_cooldown_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
